--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-python.min.js"></script>
     <!-- Meta Tags for SEO -->
     <meta name="description"
-        content="Angela Minardi's professional portfolio showcasing projects in 5G Wireless Networks, Blockchain, AI-Powered Chatbots, and Technical Writing Samples.">
-    <meta name="keywords" content="Angela Minardi, Portfolio, Technical Writing, 5G, Blockchain, AI Chatbot, Computer Science">
+        content="Angela Minardi's professional portfolio showcasing projects in 5G Wireless Networks, Blockchain, Smart Insole Design, and Technical Writing Samples.">
+    <meta name="keywords" content="Angela Minardi, Portfolio, Technical Writing, 5G, Blockchain, Smart Insole, Computer Science">
     <!-- Viewport for Responsive Design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -68,12 +68,12 @@
                 <div class="about-text">
                     <p>
                         I'm Angela Minardi, a dedicated computer scientist with a strong background in networking,
-                        blockchain technology, and artificial intelligence. I thrive on solving complex problems and
+                        blockchain technology, and embedded systems. I thrive on solving complex problems and
                         developing innovative solutions that make a tangible impact.
                     </p>
                     <p>
                         With hands-on experience in designing and simulating 5G wireless networks, implementing secure
-                        blockchain systems, and creating intelligent AI-powered chatbots, I bring a diverse skill set to
+                        blockchain systems, and developing smart wearable devices, I bring a diverse skill set to
                         the table. My goal is to leverage technology to drive progress and efficiency in various
                         industries.
                     </p>
@@ -119,9 +119,9 @@
                     <h3>Technologies & Tools</h3>
                     <ul>
                         <li>NS-3 Simulator</li>
+                        <li>Arduino & ESP32</li>
                         <li>TensorFlow & Keras</li>
                         <li>Blockchain (Ethereum)</li>
-                        <li>Flask & Django</li>
                         <li>Git & GitHub</li>
                     </ul>
                 </div>
@@ -183,28 +183,14 @@
                 <!-- Project 3 -->
                 <div class="project-item">
                     <div class="project-img">
-                        <img src="images/project3.jpg" alt="AI-Powered Chatbot" loading="lazy">
+                        <img src="images/project4.jpg" alt="Smart Insole Technical Design" loading="lazy">
                         <div class="overlay">
                             <a href="project3.html" class="project-link">View Details</a>
                         </div>
                     </div>
-                    <h3><a href="project3.html">AI-Powered Chatbot</a></h3>
+                    <h3><a href="project3.html">Smart Insole Technical Design</a></h3>
                     <p>
-                        Created an AI chatbot that uses machine learning and NLP to interact conversationally, serving
-                        as a personal assistant. Documented the development process, including model architecture and deployment strategies.
-                    </p>
-                </div>
-                <!-- Project 4 -->
-                <div class="project-item">
-                    <div class="project-img">
-                        <img src="images/project4.jpg" alt="Smart-Insole Technical Design" loading="lazy">
-                        <div class="overlay">
-                            <a href="project4.html" class="project-link">View Details</a>
-                        </div>
-                    </div>
-                    <h3><a href="project4.html">Smart-Insole Technical Design</a></h3>
-                    <p>
-                        Developed an intelligent smart insole to monitor gait patterns in real-time. Produced detailed technical documentation and user guides for both technical and non-technical stakeholders.
+                        Developed an intelligent smart insole to monitor gait patterns in real-time. Produced detailed technical documentation, including design specifications and user manuals, to support both technical and non-technical stakeholders.
                     </p>
                 </div>
             </div>
