--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                             <span class="tech-tag">JWT Auth</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">🔗 Live Demo</a>
+                            <a href="project1.html" class="project-link">🔗 Live Demo</a>
                             <a href="#" class="project-link">📁 GitHub</a>
                         </div>
                     </div>
