--- a/index.html
+++ b/index.html
@@ -553,8 +553,8 @@
                             <span class="tech-tag">JWT Auth</span>
                         </div>
                         <div class="project-links">
-                            <a href="project1.html" class="project-link">🔗 Live Demo</a>
-                            <a href="#" class="project-link">📁 GitHub</a>
+                            <a href="demos/meditrack.html" class="project-link" target="_blank">🔗 Live Demo</a>
+                            <a href="https://github.com/angelaminardi/meditrack" class="project-link" target="_blank">📁 GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -575,8 +575,8 @@
                             <span class="tech-tag">React Dashboard</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">📊 Case Study</a>
-                            <a href="#" class="project-link">📁 GitHub</a>
+                            <a href="demos/smartschedule.html" class="project-link" target="_blank">🔗 Live Demo</a>
+                            <a href="https://github.com/angelaminardi/smartschedule" class="project-link" target="_blank">📁 GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -597,8 +597,8 @@
                             <span class="tech-tag">HL7 Integration</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">🔗 Live Demo</a>
-                            <a href="#" class="project-link">📁 GitHub</a>
+                            <a href="demos/healthmetrics.html" class="project-link" target="_blank">🔗 Live Demo</a>
+                            <a href="https://github.com/angelaminardi/healthmetrics" class="project-link" target="_blank">📁 GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -640,8 +640,8 @@
                             <span class="tech-tag">REST API</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">📊 Case Study</a>
-                            <a href="#" class="project-link">📁 GitHub</a>
+                            <a href="https://github.com/angelaminardi/pharminventory" class="project-link" target="_blank">📊 Case Study</a>
+                            <a href="https://github.com/angelaminardi/pharminventory" class="project-link" target="_blank">📁 GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -661,8 +661,8 @@
                             <span class="tech-tag">TCP/IP</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">📊 Documentation</a>
-                            <a href="#" class="project-link">📁 GitHub</a>
+                            <a href="docs/network-infrastructure.pdf" class="project-link" target="_blank">📊 Documentation</a>
+                            <a href="https://github.com/angelaminardi/hospital-network" class="project-link" target="_blank">📁 GitHub</a>
                         </div>
                     </div>
                 </div>
